Bug 231380 - To-dos created from date navigator context menu not displayed in agenda and month view
Summary: To-dos created from date navigator context menu not displayed in agenda and m...
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-20 03:26 UTC by Sabine Faure
Modified: 2010-03-25 00:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-03-20 03:26:06 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Click on agenda view
- Right click on next Monday in the date navigator and select 'New To-do...'
- Fill in the title and leave next Monday as the due date
- Click on 'Ok'

The to-do is not displayed at all in the agenda view whereas if you click on the 'To-do List' button it is listed there.
The to-do is not displayed in the month view either.

Trunk, Svn Rev 1105215
Comment 1 Sergio Martins 2010-03-23 02:14:02 UTC
SVN commit 1106500 by smartins:

Make to-dos show in agenda view. Month view is ok.

MERGE: 4.4

BUG: 231380


 M  +5 -5      koagendaview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1106500
Comment 2 Sergio Martins 2010-03-23 02:26:50 UTC
SVN commit 1106503 by smartins:

Backport r1106500 by smartins from trunk to branch 4.4:

Make to-dos show in agenda view. Month view is ok.

CCBUG: 231380


 M  +5 -5      koagendaview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1106503
Comment 3 Sabine Faure 2010-03-24 22:02:26 UTC
It is mostly corrected now.

The to-do is now displayed on the agenda view when created from the date navigator but it is still not displayed in the month view.

So I am reopening this bug.

Trunk, Svn Rev 1106990
Comment 4 Sabine Faure 2010-03-25 00:33:28 UTC
After retesting and discussing this with Sergio (Thx for your help!) I am verifying this bug.

The to-do is now displayed in both the agenda and month view when created from the date navigator.

However a display bug prevented me to see it that is why I initially reopened this bug. I will report a different bug about that issue.
In any case this one is fixed.

Trunk, Svn Rev 1106990