Make to-dos show in agenda view. Month view is ok.

MERGE: 4.4

BUG: 231380

svn path=/trunk/KDE/kdepim/korganizer/views/agendaview/; revision=1106500