calendarviews/eventviews/agenda/koagendaview.cpp
@@ -1412,12 +1412,12 @@ void KOAgendaView::displayIncidence( const Item &aitem )
     } else if ( event ) {
       dateToAdd = incDtStart;
       incidenceEnd = incDtEnd;
+    }
 
-      if ( dateToAdd.isDateOnly() ) {
-        // so comparisons with < > actually work
-        dateToAdd.setTime( QTime( 0, 0 ) );
-        incidenceEnd.setTime( QTime( 23, 59 ) );
-      }
+    if ( dateToAdd.isValid() && dateToAdd.isDateOnly() ) {
+      // so comparisons with < > actually work
+      dateToAdd.setTime( QTime( 0, 0 ) );
+      incidenceEnd.setTime( QTime( 23, 59 ) );
     }
 
     if  ( dateToAdd <= lastVisibleDateTime && incidenceEnd > firstVisibleDateTime ) {
